; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/smartpqi/extr_smartpqi_discovery.c_pqisrc_scsi_sense_valid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/smartpqi/extr_smartpqi_discovery.c_pqisrc_scsi_sense_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sense_header_scsi = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"IN\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"OUT\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sense_header_scsi*)* @pqisrc_scsi_sense_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pqisrc_scsi_sense_valid(%struct.sense_header_scsi* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sense_header_scsi*, align 8
  store %struct.sense_header_scsi* %0, %struct.sense_header_scsi** %3, align 8
  %4 = call i32 @DBG_FUNC(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.sense_header_scsi*, %struct.sense_header_scsi** %3, align 8
  %6 = icmp ne %struct.sense_header_scsi* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

8:                                                ; preds = %1
  %9 = call i32 @DBG_FUNC(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %10 = load %struct.sense_header_scsi*, %struct.sense_header_scsi** %3, align 8
  %11 = getelementptr inbounds %struct.sense_header_scsi, %struct.sense_header_scsi* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, 112
  %14 = icmp eq i32 %13, 112
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %8, %7
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @DBG_FUNC(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
